@@ -19,10 +19,12 @@
  */
 package org.olat.modules.openbadges.ui;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 
 import org.olat.core.dispatcher.mapper.Mapper;
 import org.olat.core.gui.UserRequest;
@@ -42,6 +44,7 @@ import org.olat.core.gui.media.MediaResource;
 import org.olat.core.gui.media.NotFoundMediaResource;
 import org.olat.core.gui.translator.Translator;
 import org.olat.core.util.StringHelper;
+import org.olat.core.util.WebappHelper;
 import org.olat.core.util.vfs.VFSLeaf;
 import org.olat.core.util.vfs.VFSMediaResource;
 import org.olat.modules.openbadges.BadgeClass;
@@ -77,6 +80,8 @@ public class CreateBadge04SummaryStep extends BasicStep {
 
 		private final String mediaUrl;
 		private CreateBadgeClassWizardContext createContext;
+		private ImageFormItem imageEl;
+		private final String tmpSvgFileName;
 
 		@Autowired
 		private OpenBadgesManager openBadgesManager;
@@ -88,9 +93,19 @@ public class CreateBadge04SummaryStep extends BasicStep {
 				createContext = createBadgeClassWizardContext;
 			}
 
+			tmpSvgFileName = createContext.getBadgeClass().getUuid() + ".svg";
+			removeTemporarySvgFile();
+
 			mediaUrl = registerMapper(ureq, new BadgeClassMediaFileMapper());
 
 			initForm(ureq);
+		}
+
+		private void removeTemporarySvgFile() {
+			File tmpSvgFile = new File(WebappHelper.getTmpDir(), tmpSvgFileName);
+			if (tmpSvgFile.exists()) {
+				tmpSvgFile.delete();
+			}
 		}
 
 		@Override
@@ -111,11 +126,14 @@ public class CreateBadge04SummaryStep extends BasicStep {
 		@Override
 		protected void initForm(FormItemContainer formLayout, Controller listener, UserRequest ureq) {
 			if (createContext.getMode() == CreateBadgeClassWizardContext.Mode.create) {
+				imageEl = new ImageFormItem(ureq.getUserSession(), "form.image");
+				formLayout.add(imageEl);
+
 				flc.contextPut("createMode", true);
 				if (createContext.selectedTemplateIsSvg() || createContext.ownFileIsSvg()) {
 					setSvg();
 				} else if (createContext.selectedTemplateIsPng() || createContext.ownFileIsPng()) {
-					setPng(ureq, formLayout);
+					setPng();
 				}
 			} else {
 				flc.contextPut("createMode", false);
@@ -134,7 +152,7 @@ public class CreateBadge04SummaryStep extends BasicStep {
 
 			uifactory.addStaticTextElement("form.criteria.description", null, OpenBadgesUIFactory.getDescription(badgeCriteria), formLayout);
 
-			buildConditionsFromContext(formLayout);
+			buildConditionsFromContext();
 
 			if (!badgeCriteria.isAwardAutomatically()) {
 				uifactory.addStaticTextElement("badge.issued.manually", null,
@@ -142,7 +160,7 @@ public class CreateBadge04SummaryStep extends BasicStep {
 			}
 		}
 
-		private void buildConditionsFromContext(FormItemContainer formLayout) {
+		private void buildConditionsFromContext() {
 			BadgeCriteria badgeCriteria = createContext.getBadgeCriteria();
 
 			flc.contextPut("showConditions", badgeCriteria.isAwardAutomatically());
@@ -168,23 +186,24 @@ public class CreateBadge04SummaryStep extends BasicStep {
 			if (!badgeClass.isValidityEnabled()) {
 				return translate("form.never");
 			} else {
-				StringBuilder sb = new StringBuilder();
-				sb.append(badgeClass.getValidityTimelapse());
-				sb.append(" ");
-				sb.append(translate("form.time." + badgeClass.getValidityTimelapseUnit().name()));
-				return sb.toString();
+				return badgeClass.getValidityTimelapse() +
+						" " +
+						translate("form.time." + badgeClass.getValidityTimelapseUnit().name());
 			}
 		}
 
 		private void setSvg() {
 			Long templateKey = createContext.getSelectedTemplateKey();
-			if (templateKey == CreateBadgeClassWizardContext.OWN_BADGE_KEY) {
+			if (Objects.equals(templateKey, CreateBadgeClassWizardContext.OWN_BADGE_KEY)) {
 				try {
-					String svg = new String(Files.readAllBytes(createContext.getTemporaryBadgeImageFile().toPath()), "UTF8");
-					flc.contextPut("svg", svg);
+					String svg = Files.readString(createContext.getTemporaryBadgeImageFile().toPath());
+					File tmpSvgFile = new File(WebappHelper.getTmpDir(), tmpSvgFileName);
+					Files.writeString(tmpSvgFile.toPath(), svg);
+					imageEl.setMedia(tmpSvgFile);
+					imageEl.setVisible(true);
 				} catch (IOException e) {
 					logError("Invalid image file", e);
-					flc.contextRemove("svg");
+					imageEl.setVisible(false);
 				}
 				return;
 			}
@@ -193,24 +212,33 @@ public class CreateBadge04SummaryStep extends BasicStep {
 			String title = createContext.getTitle();
 			String svg = openBadgesManager.getTemplateSvgImageWithSubstitutions(templateKey, backgroundColorId, title);
 			if (StringHelper.containsNonWhitespace(svg)) {
-				flc.contextPut("svg", svg);
+				File tmpSvgFile = new File(WebappHelper.getTmpDir(), tmpSvgFileName);
+				try {
+					Files.writeString(tmpSvgFile.toPath(), svg);
+					imageEl.setMedia(tmpSvgFile);
+					imageEl.setVisible(true);
+				} catch (IOException e) {
+					logError("", e);
+					imageEl.setVisible(false);
+				}
 			} else {
-				flc.contextRemove("svg");
+				imageEl.setVisible(false);
 			}
 		}
 
-		private void setPng(UserRequest ureq, FormItemContainer formLayout) {
+		private void setPng() {
 			Long templateKey = createContext.getSelectedTemplateKey();
-			if (templateKey == CreateBadgeClassWizardContext.OWN_BADGE_KEY) {
-				ImageFormItem imageEl = new ImageFormItem(ureq.getUserSession(), "form.image");
+			if (Objects.equals(templateKey, CreateBadgeClassWizardContext.OWN_BADGE_KEY)) {
 				imageEl.setMedia(createContext.getTemporaryBadgeImageFile());
-				formLayout.add(imageEl);
 				return;
 			}
 
-			ImageFormItem imageEl = new ImageFormItem(ureq.getUserSession(), "form.image");
 			imageEl.setMedia(openBadgesManager.getTemplateVfsLeaf(createContext.getSelectedTemplateImage()));
-			formLayout.add(imageEl);
+		}
+
+		@Override
+		protected void doDispose() {
+			removeTemporarySvgFile();
 		}
 
 		private class BadgeClassMediaFileMapper implements Mapper {
